--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,10 @@
   "name": "new",
   "version": "0.1.0",
   "private": true,
+   "engines": {
+  "npm": "8.18.0",
+  "node": "16.16.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +14,7 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.8.0",
     "react-router-dom": "^6.8.0",
