--- a/client/package.json
+++ b/client/package.json
@@ -1,11 +1,7 @@
 {
-  "name": "new",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
-   "engines": {
-  "npm": "^9.5.1",
-  "node": "^18.16.0"
-  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,7 +14,7 @@
     "react-redux": "^8.0.5",
     "react-router": "^6.8.0",
     "react-router-dom": "^6.8.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
